--- a/app/globals.css
+++ b/app/globals.css
@@ -129,6 +129,14 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* custom */
+  --breakpoint-xs: 360px;
+  --breakpoint-sm: 480px;
+  --breakpoint-md: 640px;
+  --breakpoint-lg: 960px;
+  --breakpoint-xl: 1180px;
+  --breakpoint-2xl: 1400px;
 }
 
 @layer base {
@@ -137,6 +145,15 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* UTILS */
+  .responsive-border {
+    @apply border border-neutral-700 xs:border-green-400 sm:border-green-600 md:border-blue-500 lg:border-red-500 xl:border-neutral-700;
+  }
+
+  .child-border > * {
+    @apply border border-neutral-400;
   }
 }
 
@@ -153,7 +170,8 @@
 }
 
 html {
-  min-width: 360px;
+  /* min-width: 360px; */
+  min-width: 320px;
 }
 
 .prose .anchor {
