--- a/app/globals.css
+++ b/app/globals.css
@@ -155,6 +155,14 @@
     gap-y-6;
   }
 
+  .centered {
+    @apply flex justify-center items-center;
+  }
+
+  .centered-col {
+    @apply flex flex-col justify-center items-center;
+  }
+
   /* UTILS */
   .responsive-border {
     @apply border border-neutral-700 xs:border-green-400 sm:border-green-600 md:border-blue-500 lg:border-red-500 xl:border-neutral-700;
