--- a/app/globals.css
+++ b/app/globals.css
@@ -163,6 +163,10 @@
     @apply flex flex-col justify-center items-center;
   }
 
+  .page-wrapper {
+    @apply pt-8 md:pt-10 px-4 sm:px-6 md:px-8 lg:px-10;
+  }
+
   /* UTILS */
   .responsive-border {
     @apply border border-neutral-700 xs:border-green-400 sm:border-green-600 md:border-blue-500 lg:border-red-500 xl:border-neutral-700;
